--- a/1-Natours/index.html
+++ b/1-Natours/index.html
@@ -29,17 +29,25 @@
         
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-8">
+                <div class="u-center-text u-margin-bottom-large">
                     <h2 class="heading-secondary">
                         Exciting tours for adventurous people
                     </h2>
                 </div>
                 <div class="row">
                     <div class="col-1-of-2">
-                        Text will go here
+                        <div class="h3 heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</div>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem provident adipisci consequuntur temporibus fugiat, cumque mollitia, iste autem suscipit magnam dolor. Nulla dolorum dolores quas!</p>
+                        <div class="h3 heading-tertiary u-margin-bottom-small">Live adventures like you never have before</div>
+                        <p class="paragraph">Voluptatem provident adipisci consequuntur temporibus fugiat, cumque mollitia, iste autem suscipit magnam dolor. Nulla dolorum dolores quas!</p>
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
-                        Images will go here
+                        <div class="composition">
+                            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        </div>
                     </div>
                 </div>
             </section>
