stories section with bg video and animations

--- a/1-Natours/index.html
+++ b/1-Natours/index.html
@@ -189,7 +189,53 @@
 			</div>
 			<div class="u-center-text u-margin-top-xlarge">
 					<a href="#" class="btn btn--green">Discover all tours</a>
+			</div>
+		</section>
+
+		<section class="section-stories">
+			<div class="bg-video">
+				<video class="bg-video__content" autoplay muted loop>
+					<source src="img/video.mp4" type="video/mp4">
+					<source src="img/video.webm" type="video/webm">
+						Your browser is not supported!
+				</video>
+			</div>
+			<div class="u-center-text u-margin-bottom-large">
+				<h2 class="heading-secondary">
+					We make people genuinely happy
+				</h2>
+			</div>
+			<div class="row">
+				<div class="story">
+					<figure class="story__shape">
+						<img src="img/nat-8.jpg" alt="Person on tour" class="story__image">
+						<fitcaption class="story__caption">
+							Mary Smith
+						</fitcaption>
+					</figure>
+					<div class="story__text">
+						<h3 class="heading-tertiary u-margin-bottom-small">Time well spent with family</h3>
+						<p>Ipsum dolor sit, amet consectetur adipisicing elit. Mollitia veritatis pariatur doloribus molestiae molestias ex sequi consequatur impedit. Error molestias eveniet atque totam voluptatem vitae quisquam aspernatur odio eligendi minima est ducimus sint pariatur quis, incidunt sed iusto ipsam explicabo?</p>
+					</div>
 				</div>
+			</div>
+			<div class="row">
+				<div class="story">
+					<figure class="story__shape">
+						<img src="img/nat-9.jpg" alt="Person on tour" class="story__image">
+						<fitcaption class="story__caption">
+							James Williams
+						</fitcaption>
+					</figure>
+					<div class="story__text">
+						<h3 class="heading-tertiary u-margin-bottom-small">This trip changed my life!</h3>
+						<p>Consectetur adipisicing elit. Mollitia veritatis pariatur doloribus molestiae molestias ex sequi consequatur impedit. Error molestias eveniet atque totam voluptatem vitae quisquam aspernatur odio eligendi minima est ducimus sint pariatur quis, incidunt sed iusto ipsam explicabo?</p>
+					</div>
+				</div>
+			</div>
+			<div class="u-center-text u-margin-top-xlarge">
+				<a href="#" class="btn-text">Read all stories &rarr;</a>
+		 </div>
 		</section>
 	</main>
 
