--- a/1-Natours/index.html
+++ b/1-Natours/index.html
@@ -321,6 +321,22 @@
 		</div>
 	</footer>
 
+	<div class="popup">
+		<div class="popup__content">
+			<div class="popup__left">
+				<img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+				<img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+			</div>
+			<div class="popup__right">
+				<h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+				<h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read terms before booking</h3>
+				<p class="popup__text u-margin-bottom-small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum placeat aspernatur, vero delectus ipsam corporis praesentium ipsa excepturi minus blanditiis cum rem doloremque, in esse reiciendis modi libero incidunt obcaecati!
+				Numquam quae sit pariatur quas provident, velit at deleniti! Voluptates excepturi beatae accusamus eveniet nostrum, aspernatur minus. Eos doloribus, modi eum nesciunt repellat reprehenderit. Incidunt quidem quas iste error amet?</p>
+				<a href="#" class="btn btn--green">Book now</a>
+			</div>
+		</div>
+	</div>
+
 </body>
 
 </html>
