popup functionality added

--- a/1-Natours/index.html
+++ b/1-Natours/index.html
@@ -105,7 +105,7 @@
 			</div>
 		</section>
 
-		<section class="section-tours">
+		<section class="section-tours" id="section-tours">
 			<div class="u-center-text u-margin-bottom-large">
 				<h2 class="heading-secondary">
 					Most popular tours
@@ -136,7 +136,7 @@
 									<p class="card__price-only">Only</p>
 									<p class="card__price-value">$295</p>
 								</div>
-								<a href="#" class="btn btn--white">Book now</a>
+								<a href="#popup" class="btn btn--white">Book now</a>
 							</div>
 						</div>
 					</div>
@@ -166,7 +166,7 @@
 									<p class="card__price-only">Only</p>
 									<p class="card__price-value">$265</p>
 								</div>
-								<a href="#" class="btn btn--white">Book now</a>
+								<a href="#popup" class="btn btn--white">Book now</a>
 							</div>
 						</div>
 					</div>
@@ -196,7 +196,7 @@
 									<p class="card__price-only">Only</p>
 									<p class="card__price-value">$300</p>
 								</div>
-								<a href="#" class="btn btn--white">Book now</a>
+								<a href="#popup" class="btn btn--white">Book now</a>
 							</div>
 						</div>
 					</div>
@@ -321,13 +321,14 @@
 		</div>
 	</footer>
 
-	<div class="popup">
+	<div class="popup" id="popup">
 		<div class="popup__content">
 			<div class="popup__left">
 				<img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
 				<img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
 			</div>
 			<div class="popup__right">
+				<a href="#section-tours" class="popup__close">&times;</a>
 				<h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
 				<h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read terms before booking</h3>
 				<p class="popup__text u-margin-bottom-small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum placeat aspernatur, vero delectus ipsam corporis praesentium ipsa excepturi minus blanditiis cum rem doloremque, in esse reiciendis modi libero incidunt obcaecati!
