--- a/2-Trillo/index.html
+++ b/2-Trillo/index.html
@@ -152,23 +152,57 @@
                                 <li class="list__item">Perfect for families</li>
                             </ul>
                             <div class="recommend">
-                                <p class="paragraph">
+                                <p class="recommend__count">
                                     James and 3 other friends recommend this hotel.
                                 </p>
                                 <div class="recommend__friends">
-                                    <img src="img/user-3.jpg" alt="Friends" class="recommed__photo">
-                                    <img src="img/user-4.jpg" alt="Friends" class="recommed__photo">
-                                    <img src="img/user-5.jpg" alt="Friends" class="recommed__photo">
-                                    <img src="img/user-6.jpg" alt="Friends" class="recommed__photo">
+                                    <img src="img/user-3.jpg" alt="Friends" class="recommend__photo">
+                                    <img src="img/user-4.jpg" alt="Friends" class="recommend__photo">
+                                    <img src="img/user-5.jpg" alt="Friends" class="recommend__photo">
+                                    <img src="img/user-6.jpg" alt="Friends" class="recommend__photo">
                                 </div>
                             </div>
                         </div>
+                        <!-- User reviews -->
                         <div class="user-reviews">
-                            <blockquote class="review__text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, tempore?
-                            </blockquote>
-                            figcaption
+                            <!-- Review item -->
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                        Beatae, quaerat officia! Nesciunt nisi alias ad vel, nobis architecto nam minus blanditiis. Optio excepturi dolore voluptatem inventore totam dolores ea laudantium officiis optio!
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-1.jpg" alt="User 1" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Nick Smith</p>
+                                        <p class="review__user-date">May 11th 2018</p>
+                                    </div>
+                                    <div class="review__rating">8.2</div>
+                                </figcaption>
+                            </figure>
+                            <!-- Review item -->
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Sit amet consectetur adipisicing elit. Facilis aliquid eligendi odio impedit incidunt, at laborum omnis repudiandae quas laboriosam distinctio obcaecati praesentium.
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-2.jpg" alt="User 2" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Julie Adams</p>
+                                        <p class="review__user-date">March 9th 2018</p>
+                                    </div>
+                                    <div class="review__rating">7.6</div>
+                                </figcaption>
+                            </figure>
+                            <button class="button-inline">Show all <span>&rarr;</span> </button>
                         </div>
+                    </div>
+                    <!-- CTA -->
+                    <div class="cta">
+                        <h2 class="cta__book-now">Good news! We have 4 free rooms for your selected dates!</h2>
+                        <button class="btn">
+                            <span class="btn__visible">Book now</span>    
+                            <span class="btn__invisible">Only 4 rooms left!</span>    
+                        </button>
                     </div>
                 </main>
             </div>
