--- a/3-Nexter/index.html
+++ b/3-Nexter/index.html
@@ -12,6 +12,40 @@
         <title>nexter &mdash; your home, your freedom</title>
     </head>
     <body class="container">
-        
+        <div class="sidebar">
+            sidebar
+        </div>
+
+        <header class="header">
+            header
+        </header>
+
+        <div class="realtors">
+            Top 3 realtors
+        </div>
+
+        <section class="features">
+            featres
+        </section>
+
+        <div class="story__pictures">
+            story pics
+        </div>
+
+        <div class="story__content">
+            story content
+        </div>
+
+        <section class="homes">
+            homes
+        </section>
+
+        <section class="gallery">
+            gallery
+        </section>
+
+        <footer class="footer">
+            footer
+        </footer>
     </body>
 </html>
