--- a/3-Nexter/index.html
+++ b/3-Nexter/index.html
@@ -13,7 +13,7 @@
     </head>
     <body class="container">
         <div class="sidebar">
-            sidebar
+            <button class="nav-btn"></button>
         </div>
 
         <header class="header">
@@ -328,7 +328,15 @@
         </section>
 
         <footer class="footer">
-            footer
+            <ul class="nav">
+                <li class="nav__item"><a href="#" class="nav__link">Find your dream home</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Download home planner</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Contact Us</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Come work with us</a></li>
+            </ul>
+            <p class="copyright">Design &copy; Jonas Schmedtmann</p>
         </footer>
     </body>
 </html>
